Change naming convention a little, make h1 larger fix & tiny bug on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,13 +72,13 @@ a {
   color: var(--color-text);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 520px) {
   .colorflip {
     width: 100vw;
     padding: 60px 30px;
   }
 
   h1 {
-    font-size: 20px;
+    font-size: 24px;
   }
 }
